--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,13 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(.)
 
 add_executable(exchange_craft
-        CSVProcessor.cpp
-        CSVProcessor.h
+        frontend/CSVProcessor.cpp
+        frontend/CSVProcessor.h
         ExchangeCore.cpp
         ExchangeCore.h
         main.cpp
         Order.cpp
         Order.h
         OrderTypeConverter.cpp
-        OrderTypeConverter.h)
+        OrderTypeConverter.h
+)
